fix(style): add overflow for note

--- a/src/components/Notes/NotesList.css
+++ b/src/components/Notes/NotesList.css
@@ -13,6 +13,7 @@
   width: 100%;
   height: 10rem;
   max-width: 25rem;
+  overflow: auto;
   margin: 2.5rem;
   padding: 1rem 2rem;
   border-radius: 0.8rem;
